--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^123.0.1",
     "html2canvas": "^1.4.1",
     "next": "13.5.6",
-    "puppeteer": "^24.24.1",
+    "puppeteer-core": "^21.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
