--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,12 @@
       "dest": "/$1"
     }
   ],
+  "functions": {
+    "app/api/screenshot/route.js": {
+      "maxDuration": 60,
+      "memory": 3008
+    }
+  },
   "env": {
     "NODE_ENV": "production"
   }
