--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sparticuz/chromium": "119.0.2",
+    "@sparticuz/chromium": "^126.0.0",
     "html2canvas": "^1.4.1",
     "next": "13.5.6",
-    "puppeteer-core": "19.11.1",
+    "puppeteer-core": "^22.12.1",
     "react": "^18",
     "react-dom": "^18"
   },
