--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sparticuz/chromium-min": "^131.0.0",
+    "@sparticuz/chromium": "^131.0.0",
     "html2canvas": "^1.4.1",
     "next": "13.5.6",
     "puppeteer-core": "^23.7.1",
