--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^131.0.0",
+    "@sparticuz/chromium": "^141.0.0",
+    "chromium-bidi": "^10.4.0",
     "html2canvas": "^1.4.1",
     "next": "13.5.6",
-    "puppeteer-core": "^23.7.1",
+    "playwright-core": "^1.56.0",
     "react": "^18",
     "react-dom": "^18"
   },
