--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     "app/api/screenshot/route.js": {
       "maxDuration": 60,
       "memory": 3008
+    },
+    "app/api/screenshot-playwright/route.js": {
+      "maxDuration": 60,
+      "memory": 3008
     }
   },
   "env": {
